<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity"
    android:screenOrientation="portrait">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/survivalModeTxt"
            style="@style/fontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp"
            android:text="@string/survival_mode_title" />

        <TextView
            android:id="@+id/scoreTimeLbl"
            style="@style/fontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/score_time_lbl" />

        <TextView
            android:id="@+id/scoreTimeTxt"
            style="@style/fontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/timer_txt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/burstModeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp"
            android:text="@string/burst_mode_title"
            style="@style/fontTheme" />

        <TextView
            android:id="@+id/scoreLbl"
            style="@style/fontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/score_lbl" />

        <TextView
            android:id="@+id/scoreTxt"
            style="@style/fontTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/score_txt" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>