<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:screenOrientation="portrait">


    <TextView
        android:id="@+id/titleTxt"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/touch_the_dots_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt"
        android:onClick="playOnClick"/>

    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ModeTxt"
        android:contentDescription="@string/survival_mode_title"
        android:drawSelectorOnTop="true"
        android:minHeight="36dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toEndOf="@+id/ModeTxt"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"
        app:layout_constraintVertical_bias="0.503"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/ModeTxt"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:text="@string/mode_lbl"
        app:layout_constraintBottom_toTopOf="@+id/scoreBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/scoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:onClick="launchScoreActivity"
        android:text="@string/scoreBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>