<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BurstModeActivity">

    <TextView
        android:id="@+id/burstScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/fontTheme"/>

    <TextView
        android:id="@+id/burstScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/burstScoreLabel"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/fontTheme" />

    <TextView
        android:id="@+id/burstScoreTimerLabel"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/score_time_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/burstScoreTimer"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/timer_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/burstScoreTimerLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dot1"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_burstMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/dot2"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_burstMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <Button
        android:id="@+id/dot3"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_burstMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/dot4"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_burstMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/dot5"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_burstMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <LinearLayout
        android:id="@+id/displayScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:translationZ="90dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/displayScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/score_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/displayScore"
            android:layout_marginTop="73dp"
            />

        <TextView
            android:id="@+id/displayScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/score_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/displayScore"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/playAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/play_again_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#00000000"
            android:textSize="34dp"
            android:layout_marginTop="154dp"
            android:onClick="resetGame"/>

        <Button
            android:id="@+id/goBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/go_back_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#00000000"
            android:textSize="34dp"
            android:layout_marginTop="54dp"
            android:onClick="returnToMenu"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>