<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurvivalModeActivity"
    android:screenOrientation="portrait">

    <TextView
        android:id="@+id/survivalTimerLabel"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_time_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/survivalTimerTxt"
        style="@style/fontTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/timer_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toEndOf="@+id/survivalTimerLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dot1"
        android:text=""
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/dot"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_survivalMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dot2"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/dot3"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/dot4"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/dot5"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_dot"
        android:onClick="dotOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

    <Button
        android:id="@+id/square1"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:onClick="squareOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <Button
        android:id="@+id/square2"
        style="@style/dot"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:onClick="squareOnClick_survivalMode"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <LinearLayout
        android:id="@+id/displayScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:translationZ="90dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/displayScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="Game Over"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/displayScore"
            android:layout_marginTop="43dp"
            />

        <TextView
            android:id="@+id/displayTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/score_time_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/displayScore"
            android:layout_marginTop="80dp"
            />

        <TextView
            android:id="@+id/displayTimeScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="00:00:00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/displayScore"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/playAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/play_again_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#00000000"
            android:textSize="34dp"
            android:layout_marginTop="74dp"
            android:onClick="resetGame"/>

        <Button
            android:id="@+id/goBackBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/go_back_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#00000000"
            android:textSize="34dp"
            android:layout_marginTop="54dp"
            android:onClick="returnToMenu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>